--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,7 @@ jobs:
           name: Build LineageOS
           command: |
             cd ~/android/lineage
+            source build/envsetup.sh
             m -j$(nproc) bacon
 
 workflows:
