--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ executors:
   build-executor:
     docker:
       - image: lineageos4microg/docker-lineage-cicd:latest
+    resource_class: large
 
 jobs:
   build_lineage:
