--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,11 @@ jobs:
       - run:
           name: Sync LineageOS sources
           command: |
+            mkdir -p ~/bin
+            curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
+            chmod a+x ~/bin/repo
+            echo 'export PATH=~/bin:$PATH' >> ~/.bashrc
+            source ~/.bashrc
             mkdir -p ~/android/lineage
             cd ~/android/lineage
             repo init -u https://github.com/LineageOS/android.git -b $TARGET_BRANCH --git-lfs
