--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,11 +34,7 @@ jobs:
       - run:
           name: Sync LineageOS sources
           command: |
-            mkdir -p ~/bin
-            curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
-            chmod a+x ~/bin/repo
-            echo 'export PATH=~/bin:$PATH' >> ~/.bashrc
-            source ~/.bashrc
+            sudo apt install repo
             mkdir -p ~/android/lineage
             cd ~/android/lineage
             repo init -u https://github.com/LineageOS/android.git -b $TARGET_BRANCH --git-lfs
