--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,8 @@ jobs:
       - run:
           name: Sync LineageOS sources
           command: |
+            sudo add-apt-repository universe
+            sudo apt update
             sudo apt install repo
             mkdir -p ~/android/lineage
             cd ~/android/lineage
