--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,8 @@ jobs:
             python --version
             mkdir -p ~/android/lineage
             cd ~/android/lineage
-            repo init -u https://github.com/LineageOS/android.git -b $TARGET_BRANCH --git-lfs
-            repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
+            python repo init -u https://github.com/LineageOS/android.git -b $TARGET_BRANCH --git-lfs
+            python repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
       - run:
           name: Clone LineageOS Common Samsung repos
           command: |
