--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: Setup Git
           command: |
             sudo apt update
-            sudo apt install git-lfs python-is-python3 python3
+            sudo apt install git-lfs python-is-python3 python3 libncurses5
             git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git config --global user.name "github-actions[bot]"
             git lfs install
